src/test/deca/context/valid/decl_var_already_declared_in_parent.deca
// Test la règle 3.17: déclaration d'une variable déjà existante
// dans la classe parent

class A {
    int x = 12;

}

class B extends A {
    int x = 5;
}


// Resultat:

// Test la règle 3.24: Pas le droit de return float alors qu'on attend pas de return

