src/test/deca/context/invalid/inst_return_in_void_method_class.deca
// Test la règle 3.24: Pas le droit de return quelque chose alors qu'on attend pas de return

class A  {
    float getFloat(){
        return 3.14;
    }
}

class B {
    A a = new A();
    void voidMethod(){
        return a;
    }
}



// Resultat:
//# TODOTEST
